--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #logging.level.org.springframework.jdbc.core=DEBUG
-#spring.datasource.url=jdbc:sqlserver://arvitum-sql-server.database.windows.net;databaseName=Arvitum
-spring.datasource.url=${SQLConnection}
-#spring.datasource.username=MikeTest
-#spring.datasource.password=1234567890Mike
+spring.datasource.url=jdbc:sqlserver://arvitum-sql-server.database.windows.net;databaseName=Arvitum
+hello.message=${SQLConnection}
+spring.datasource.username=MikeTest
+spring.datasource.password=1234567890Mike
 
 #spring.datasource.initialization-mode=always
 
