test connection string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #logging.level.org.springframework.jdbc.core=DEBUG
 spring.datasource.url=jdbc:sqlserver://arvitum-sql-server.database.windows.net;databaseName=Arvitum
-hello.message=${SQLConnection}
+#hello.message=${SQLConnection}
 spring.datasource.username=MikeTest
 spring.datasource.password=1234567890Mike
 
